--- a/src/app/components/navbar-menu/navbar-menu.component.html
+++ b/src/app/components/navbar-menu/navbar-menu.component.html
@@ -17,7 +17,7 @@
                 class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
                 <li>
                     <a [routerLinkActive]="['isActive']" [routerLink]="['/servicios']"
-                        class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
+                        class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0"
                         aria-current="page">
                         Mis servicios
                     </a>
@@ -71,58 +71,13 @@
 </app-dropdown>
 
 <div class="w-full hidden md:block">
-    <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
-        <li>
-            <a [routerLinkActive]="['isActive']" [routerLink]="['/servicios']"
-                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"
-                aria-current="page">
-                Mis servicios
-            </a>
-        </li>
-        <li>
-            <a [routerLinkActive]="['isActive']" [routerLink]="['/tarjetas']"
-                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">
-                Administrar tarjetas
-            </a>
-        </li>
-        <li>
-            <app-dropdown>
-                <div class="button-name">
-                    <button
-                        class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto">
-                        Username
-                        <svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
-                </div>
-                <div class="dropdown-body">
-                    <div
-                        class="z-10 fixed right-4 font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
-                        <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownLargeButton">
-                            <li>
-                                <a [routerLink]="['/perfil']" class="block px-4 py-2 hover:bg-gray-100">
-                                    Ver perfil
-                                </a>
-                            </li>
-                            <li>
-                                <a class="block px-4 py-2 hover:bg-gray-100">
-                                    Mis cupones
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="py-1">
-                            <a [routerLink]="['/']" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
-                                Cerrar sesión
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </app-dropdown>
-        </li>
-    </ul>
+    <nav mat-tab-nav-bar>
+        <a mat-tab-link *ngFor="let link of links" [routerLink]="[link.path]" 
+        [active]="activeLink == link.path">{{link.name}}</a>
+        <button mat-tab-link [matMenuTriggerFor]="menu">UserName</button>
+        <mat-menu #menu="matMenu">
+            <a mat-menu-item [routerLink]="['/perfil']">Ver perfil</a>
+            <a mat-menu-item [routerLink]="['/']">Cerrar sesión</a>
+        </mat-menu>
+    </nav>
 </div>
