--- a/src/app/pages/servicios/servicios.component.html
+++ b/src/app/pages/servicios/servicios.component.html
@@ -1,6 +1,6 @@
 <!-- servicios disponibles -->
 <div class="m-auto md:w-3/4">
-    <app-page-title title="Mis servicios" subtitle="Mira y administra tus servicios" />
+    <app-page-title title="Mis servicios"/>
 
     <app-service-card *ngFor="let service of services" id="{{service.id}}" name="{{service.name}}" status="{{service.status}}"
         description="{{service.desc}}" cost="{{service.cost}}" period="{{service.period}}" startDate="{{service.startDate}}">
