--- a/src/app/components/cupons-form/cupons-form.component.html
+++ b/src/app/components/cupons-form/cupons-form.component.html
@@ -1,22 +1,14 @@
-<div class="border border-zinc-300 rounded-md p-2">
-    <div class="button-name flex justify-between px-4">
-        <div class="flex">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <span class="ml-4">Ingresar cupon de descuento</span>
-        </div>
-        <div (click)="toggle()">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-            </svg>
-        </div>
+<mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Ingresar cupón de descuento
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="flex justify-center w-full items-center">
+        <mat-form-field appearance="fill" class="flex">
+            <mat-label>Cupón</mat-label>
+            <input matInput type="text" min="1" class="w-ful">
+        </mat-form-field>
+        <button mat-flat-button color="primary" class="mx-2">Aplicar</button>
     </div>
-    <div *ngIf="isOpen" class="dropdown-body flex flex-grow justify-between p-4">
-        <input type="text" class="border border-zinc-300 rounded-md p-2 flex-flex-auto w-full">
-        <button class="ml-2 px-2 border border-zinc-300 rounded text-indigo-600 font-semibold text-sm">Aplicar</button>
-    </div>
-</div>
+</mat-expansion-panel>
