--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -1,6 +1,6 @@
-<div class="flex item-center w-full my-4 px-4 xs:pr-0">
+<div class="flex item-center w-full mt-4 mb-8 px-4 xs:pr-0">
     <div class="mr-6">
-        <h2 class="m-0 text-3xl font-semibold">{{title}}</h2>
+        <span class="m-0 text-3xl">{{title}}</span>
         <div class="text-secondary text-zinc-500 tracking-tight">{{subtitle}}</div>
     </div>
 </div>
