--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -7,31 +7,18 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
                         </svg>  
-                        <span class="font-bold text-md">{{name}}</span>
+                        <span class="text-lg">{{name}}</span>
                     </div>
                     <div class="flex p-2 relative">
-                        <app-dropdown>
-                            <button class="button-name">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-                                </svg>   
-                            </button>
-                            <div
-                                class="dropdown-body border border-zinc-200 z-10 absolute max-sm:right-2 font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-40">
-                                <ul class="py-2 text-sm text-gray-700">
-                                    <li>
-                                        <a [routerLink]="['/historial']" class="block px-4 py-2 hover:bg-gray-100">
-                                            Historial de pagos
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="block px-4 py-2 hover:bg-gray-100 cursor-pointer" (click)="openCancelModal()">
-                                            Cancelar
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </app-dropdown>
+                        <button [mat-menu-trigger-for]="options" class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 hover:bg-zinc-200 rounded-full transtion duration-200">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>   
+                        </button>
+                        <mat-menu #options="matMenu">
+                            <a mat-menu-item [routerLink]="['/historial']">Historial de pagos</a>
+                            <a mat-menu-item (click)="openCancelModal()">Cancelar</a>
+                        </mat-menu>
                     </div>
                     
                 </div>
@@ -57,11 +44,11 @@
     </div>
 </div>
 
+<!-- modal para realizar cancelación -->
 <app-modal>
     <div #cancelModal class="button-name hidden">
-        nothing
     </div>
-    <div class="modal-body">
+    <div class="modal-body pt-4">
         <h2 class="font-semibold text.lg">¿Seguro que deseas cancelar {{name}} de tus servicios?</h2>
         <div class="flex justify-center">
             <button mat-stroked-button class="m-4 text-indigo-600" (click)="closeModal()">Cancelar</button>
