--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -1,11 +1,13 @@
-<app-page-title title="Realizar pago" />
-<div class="p-4">
-  <div class="bg-white w-3/4 relative flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto">
-    <h2 class="text-lg font-bold px-8 pt-8 pb-2 -mb-8">Informacion de la cuenta</h2>
-    <p class="text-sm text-gray-600 px-8 py-8 -mb-8">Ingrese la informacion de su cuenta para proceder</p>
-    <form>
+<div class="flex flex-col">
+  <app-page-title title="Realizar pago"/>
+  <div class="bg-white relative flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto px-8 py-4">
+    <div class="ml-4">
+      <span class="text-lg font-semibold">Informacion de la cuenta</span>
+      <p class="text-sm text-gray-600">Ingrese la informacion de su cuenta para proceder</p>
+    </div>
+    <form class="py-2">
       <div class="flex max-[768px]:flex-wrap">
-        <div class="flex flex-col w-1/2 max-[768px]:w-full mb-8 mr-6 p-8">
+        <div class="flex flex-col w-1/2 max-[768px]:w-full">
           <div class="flex w-full flex-col px-4 mt-3">
             <label class="mb-2" for="nombre">Numero de tarjeta:</label>
             <input id="nombre" type="text" class="border border-gray-300 rounded-md p-1 py-2 flex flex-auto"
@@ -28,10 +30,10 @@
                 class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto" placeholder="CVV" />
             </div>
           </div>
-
         </div>
+
         <div class="w-1/2 max-[768px]:w-full">
-          <div class="px-6 py-6 lg:px-8">
+          <div class="px-6 lg:px-8">
             <h3 class="mb-4 text-xl text-center font-semibold text-gray-900 dark:text-white">Servicio 1</h3>
             <div class="space-y-6">
               <div class="p-4 border border-zinc-300 rounded-md mb-4">
@@ -53,9 +55,11 @@
           </div>
         </div>
       </div>
-      <div class="border-t-2 border-zinc-200 flex p-4 pr-3 pb-3 justify-end">
-        <button class="px-3 py-1 mr-4 border border-zinc-300 rounded text-indigo-600 font-semibold text-sm">Realizar
-          pago</button> input dagre
+
+      <div class="border-t-2 border-zinc-200 mt-4 flex px-4 pt-3 justify-end">
+        <button mat-flat-button color="primary">Realizar
+          pago
+        </button>
       </div>
     </form>
   </div>
