--- a/src/app/pages/tarjetas/tarjetas.component.html
+++ b/src/app/pages/tarjetas/tarjetas.component.html
@@ -1,10 +1,5 @@
 <div class="sm:w-3/4 sm:m-auto">
-    <div class="flex item-center w-full my-4 px-4 xs:pr-0">
-        <div class="mr-6">
-            <h2 class="m-0 text-3xl font-semibold">Tarjetas</h2>
-            <div class="text-secondary text-zinc-500 tracking-tight">Mira y administra tus tarjetas</div>
-        </div>
-    </div>
+    <app-page-title title="Tarjetas"/>
     <div class="flex flex-wrap">
         <app-payment-card *ngFor="let card of cards" finishedIn="{{card.lastFour}}" owner="{{card.owner}}" expiration="{{card.expiration}}" id="{{card.id}}" />
 
