--- a/src/app/components/cupons-form/cupons-form.component.html
+++ b/src/app/components/cupons-form/cupons-form.component.html
@@ -5,10 +5,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="flex justify-center w-full items-center">
-        <mat-form-field appearance="fill" class="flex">
-            <mat-label>Cupón</mat-label>
-            <input matInput type="text" min="1" class="w-ful">
-        </mat-form-field>
+        <input type="text" min="1" class="w-ful p-2 border border-zinc-300 rounded">
         <button mat-flat-button color="primary" class="mx-2">Aplicar</button>
     </div>
 </mat-expansion-panel>
