--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col">
+<div class="w-[50%] max-[1700px]:w-full m-auto">
   <app-page-title title="Realizar pago"/>
-  <div class="bg-white relative flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto px-8 py-4">
+  <div class="bg-white relative flex flex-col flex-auto rounded shadow-md overflow-hidden px-8 py-4">
     <div class="ml-4">
       <span class="text-lg font-semibold">Informacion de la cuenta</span>
       <p class="text-sm text-gray-600">Ingrese la informacion de su cuenta para proceder</p>
@@ -8,33 +8,28 @@
     <form class="py-2">
       <div class="flex max-[768px]:flex-wrap">
         <div class="flex flex-col w-1/2 max-[768px]:w-full">
-          <div class="flex w-full flex-col px-4 mt-3">
-            <label class="mb-2" for="nombre">Numero de tarjeta:</label>
-            <input id="nombre" type="text" class="border border-gray-300 rounded-md p-1 py-2 flex flex-auto"
-              placeholder="Escribe el numero de tarjeta" />
-          </div>
-          <div class="flex w-full flex-col px-4 mt-3">
-            <label class="mb-2" for="apellido-paterno">Nombre y apellido:</label>
-            <input id="apellido-paterno" type="text" class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto"
-              placeholder="Escribe tu nombre y apellidos" />
-          </div>
+          <mat-form-field class="">
+            <mat-label>Numero de tarjeta</mat-label>
+            <input matInput>
+          </mat-form-field>
+          <mat-form-field class="">
+            <mat-label>Nombre y apellido</mat-label>
+            <input matInput>
+          </mat-form-field>
           <div class="flex max-[1000px]:flex-wrap">
-            <div class="flex w-full flex-col px-4 mt-3">
-              <label class="mb-2" for="apellido-paterno">Fecha de vencimiento:</label>
-              <input id="apellido-paterno" type="text"
-                class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto" placeholder="DD/YY" />
-            </div>
-            <div class="flex w-full flex-col px-4 mt-3">
-              <label class="mb-2" for="apellido-paterno">Numero de seguridad:</label>
-              <input id="apellido-paterno" type="text"
-                class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto" placeholder="CVV" />
-            </div>
+            <mat-form-field class="mr-1 max-[560px]:w-full">
+              <mat-label>Numero de tarjeta</mat-label>
+              <input matInput>
+            </mat-form-field>
+            <mat-form-field class="ml-1 max-[560px]:w-full">
+              <mat-label>Numero de tarjeta</mat-label>
+              <input matInput>
+            </mat-form-field>
           </div>
         </div>
 
         <div class="w-1/2 max-[768px]:w-full">
           <div class="px-6 lg:px-8">
-            <h3 class="mb-4 text-xl text-center font-semibold text-gray-900 dark:text-white">Servicio 1</h3>
             <div class="space-y-6">
               <div class="p-4 border border-zinc-300 rounded-md mb-4">
                 <div class="flex w-full justify-between">
