--- a/src/app/components/payment-card/payment-card.component.html
+++ b/src/app/components/payment-card/payment-card.component.html
@@ -16,8 +16,8 @@
                 </svg>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="openEditModal()">Editar</button>
-                <button mat-menu-item (click)="openDeleteModal()">Eliminar</button>
+                <button mat-menu-item (click)="openEditModal()"><span class="text-sm">Editar</span></button>
+                <button mat-menu-item (click)="openDeleteModal()"><span class="text-sm">Eliminar</span></button>
             </mat-menu>
         </app-dropdown>
     </div>
