--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -16,8 +16,8 @@
                             </svg>   
                         </button>
                         <mat-menu #options="matMenu">
-                            <a mat-menu-item [routerLink]="['/historial']">Historial de pagos</a>
-                            <a mat-menu-item (click)="openCancelModal()">Cancelar</a>
+                            <a mat-menu-item [routerLink]="['/historial']"><span class="text-sm">Historial de pagos</span></a>
+                            <a mat-menu-item (click)="openCancelModal()"><span class="text-sm">Cancelar</span></a>
                         </mat-menu>
                     </div>
                     
