--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -1,61 +1,14 @@
-<div class="w-[50%] max-[1700px]:w-full m-auto">
-  <app-page-title title="Realizar pago"/>
-  <div class="bg-white relative flex flex-col flex-auto rounded shadow-md overflow-hidden px-8 py-4">
-    <div class="ml-4">
-      <span class="text-lg font-semibold">Informacion de la cuenta</span>
-      <p class="text-sm text-gray-600">Ingrese la informacion de su cuenta para proceder</p>
+<div class="sm:w-[80%] m-auto flex">
+  
+  <div class="">
+    <app-page-title title="Realizar pago"/>
+    <div class="flex flex-col">
+      <app-payment-card/>
+      <app-payment-card/>
+      <app-payment-card/>
     </div>
-    <form class="py-2">
-      <div class="flex max-[768px]:flex-wrap">
-        <div class="flex flex-col w-1/2 max-[768px]:w-full">
-          <mat-form-field class="">
-            <mat-label>Numero de tarjeta</mat-label>
-            <input matInput>
-          </mat-form-field>
-          <mat-form-field class="">
-            <mat-label>Nombre y apellido</mat-label>
-            <input matInput>
-          </mat-form-field>
-          <div class="flex max-[1000px]:flex-wrap">
-            <mat-form-field class="mr-1 max-[560px]:w-full">
-              <mat-label>Numero de tarjeta</mat-label>
-              <input matInput>
-            </mat-form-field>
-            <mat-form-field class="ml-1 max-[560px]:w-full">
-              <mat-label>Numero de tarjeta</mat-label>
-              <input matInput>
-            </mat-form-field>
-          </div>
-        </div>
-
-        <div class="w-1/2 max-[768px]:w-full">
-          <div class="px-6 lg:px-8">
-            <div class="space-y-6">
-              <div class="p-4 border border-zinc-300 rounded-md mb-4">
-                <div class="flex w-full justify-between">
-                  <span>Servicio:</span>
-                  <span>5000MXN</span>
-                </div>
-                <div class="flex w-full justify-between">
-                  <span>Descuento:</span>
-                  <span>500MXN</span>
-                </div>
-                <div class="flex w-full justify-between">
-                  <span>Total:</span>
-                  <span>4500MXN</span>
-                </div>
-              </div>
-              <app-cupons-form />
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="border-t-2 border-zinc-200 mt-4 flex px-4 pt-3 justify-end">
-        <button mat-flat-button color="primary">Realizar
-          pago
-        </button>
-      </div>
-    </form>
+  </div>
+  <div class="h-screen w-80 bg-white">
+    
   </div>
 </div>
