--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -51,8 +51,8 @@
     <div class="modal-body pt-4">
         <h2 class="font-semibold text.lg">¿Seguro que deseas cancelar {{name}} de tus servicios?</h2>
         <div class="flex justify-center">
-            <button mat-stroked-button class="m-4 text-indigo-600" (click)="closeModal()">Cancelar</button>
-            <button mat-flat-button color="primary" class="m-4" (click)="cancelService(id)">Confirmar</button>
+            <button mat-stroked-button class="m-4 text-indigo-600" (click)="closeModal()"><span class="text-sm">Cancelar</span></button>
+            <button mat-flat-button color="primary" class="m-4" (click)="cancelService(id)"><span class="text-sm">Confirmar</span></button>
         </div>
     </div>
 </app-modal>
