--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -1,61 +1,60 @@
-<div class="w-[50%] max-[1700px]:w-full m-auto">
-  <app-page-title title="Realizar pago"/>
-  <div class="bg-white relative flex flex-col flex-auto rounded shadow-md overflow-hidden px-8 py-4">
-    <div class="ml-4">
-      <span class="text-lg font-semibold">Informacion de la cuenta</span>
-      <p class="text-sm text-gray-600">Ingrese la informacion de su cuenta para proceder</p>
-    </div>
-    <form class="py-2">
-      <div class="flex max-[768px]:flex-wrap">
-        <div class="flex flex-col w-1/2 max-[768px]:w-full">
-          <mat-form-field class="">
-            <mat-label>Numero de tarjeta</mat-label>
-            <input matInput>
-          </mat-form-field>
-          <mat-form-field class="">
-            <mat-label>Nombre y apellido</mat-label>
-            <input matInput>
-          </mat-form-field>
-          <div class="flex max-[1000px]:flex-wrap">
-            <mat-form-field class="mr-1 max-[560px]:w-full">
-              <mat-label>Numero de tarjeta</mat-label>
-              <input matInput>
-            </mat-form-field>
-            <mat-form-field class="ml-1 max-[560px]:w-full">
-              <mat-label>Numero de tarjeta</mat-label>
-              <input matInput>
-            </mat-form-field>
+<div class="flex justify-center">
+  <div class="px-4 w-[722px]">
+    <app-page-title title="Realizar pago"/>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>Metodo de pago</mat-panel-title>
+        <mat-panel-description>
+          <div class="flex flex-col">
+            <span>Terminada en 1232</span>
           </div>
-        </div>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      
+      <table class="w-full">
+        <thead class="border-b border-zinc-300">
+          <td></td>
+          <td></td>
+          <td class="px-4">Titular</td>
+          <td class="px-4">Vencimiento</td>
+        </thead>
+        <tbody>
+            <tr *ngFor="let card of cards">
+              <td><mat-radio-button/></td>
+              <td class="p-4">Terminada en {{card.lastFour}}</td>
+              <td class="p-4">{{card.owner}}</td>
+              <td class="p-4">{{card.expiration}}</td>
+            </tr>
+        </tbody>
+      </table>
 
-        <div class="w-1/2 max-[768px]:w-full">
-          <div class="px-6 lg:px-8">
-            <div class="space-y-6">
-              <div class="p-4 border border-zinc-300 rounded-md mb-4">
-                <div class="flex w-full justify-between">
-                  <span>Servicio:</span>
-                  <span>5000MXN</span>
-                </div>
-                <div class="flex w-full justify-between">
-                  <span>Descuento:</span>
-                  <span>500MXN</span>
-                </div>
-                <div class="flex w-full justify-between">
-                  <span>Total:</span>
-                  <span>4500MXN</span>
-                </div>
-              </div>
-              <app-cupons-form />
-            </div>
-          </div>
-        </div>
+      <div class="mt-4">
+        <button mat-flat-button color="primary">+ Añadir metodo de pago</button>    
       </div>
-
-      <div class="border-t-2 border-zinc-200 mt-4 flex px-4 pt-3 justify-end">
-        <button mat-flat-button color="primary">Realizar
-          pago
-        </button>
-      </div>
-    </form>
+    </mat-expansion-panel>
   </div>
+
+  <mat-card class="w-[350px]">
+    <mat-card-header>
+      <mat-card-title>Servicio EOS</mat-card-title>
+    </mat-card-header>
+    <div class="flex flex-col p-4">
+        <div class="flex justify-between mb-2 pt-2 border-t border-zinc-300">
+            <span>Servicio:</span>
+            <span>5000MXN</span>
+        </div>
+        <div class="flex justify-between mb-2">
+          <span>Descuento:</span>
+          <span>0MXN</span>
+        </div>
+        <div class="flex justify-between pb-2 border-b border-zinc-300">
+          <span>Total:</span>
+          <span>5000MXN</span>
+        </div>
+
+      <div class="mt-4">
+        <app-cupons-form></app-cupons-form>
+      </div>
+    </div>
+  </mat-card>
 </div>
