--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -39,7 +39,7 @@
         </div>
         <div class="flex justify-between py-2 border-t">
                 <div class="flex justify-between items-center text-sm"><div class="h-3 w-3 rounded-full {{color}} mr-2"></div>{{status}}</div>
-            <a *ngIf="canPay" [routerLink]="['/pagar']" class="text-indigo-600">Proceder al pago</a>
+            <a *ngIf="canPay" [routerLink]="['/pagar']" class="text-indigo-600">Renovar servicio</a>
         </div>
     </div>
 </div>
