--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -1,57 +1,59 @@
 <div class="flex justify-center">
   <div class="px-4 w-[722px]">
-    <app-page-title title="Realizar pago"/>
-    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title>Metodo de pago</mat-panel-title>
-        <mat-panel-description>
-          <div class="flex flex-col">
-            <span>Terminada en 1232</span>
-          </div>
-        </mat-panel-description>
-      </mat-expansion-panel-header>
-      
-      <table class="w-full">
-        <thead>
-          <td></td>
-          <td></td>
-          <td class="px-4">Titular</td>
-          <td class="px-4">Vencimiento</td>
-        </thead>
-        <tbody class="border-b border-t border-zinc-300">
-            <tr *ngFor="let card of cards">
-              <td><mat-radio-button/></td>
-              <td class="p-4">Terminada en {{card.lastFour}}</td>
-              <td class="p-4">{{card.owner}}</td>
-              <td class="p-4">{{card.expiration | mask: "00/00"}}</td>
-            </tr>
-        </tbody>
-      </table>
+    <app-page-title title="Realizar pago" />
+    <mat-card class="p-4">
+      <mat-card-header>
+        <div class=" w-full mb-4">
+          <p class="text-lg text-zinc-700">Metodo de pago seleccionado: Terminada en <span class="font-semibold">1234</span></p>
+        </div>
+      </mat-card-header>
 
-      <div class="mt-4">
-        <button mat-flat-button color="primary" (click)="addCard('150ms', '150ms')">+ Añadir metodo de pago</button>    
+      <mat-radio-button *ngFor="let card of cards" value="radio{{card.id}}" class="w-full">
+        <div class="flex p-4 rounded border w-[500px] my-2 cursor-pointer transition duration-150 hover:bg-zinc-100">
+          <div class="w-3/4">
+            <div class="text-lg">
+              Terminada en {{card.lastFour}}
+            </div>
+            <div class="text-zinc-700">
+              {{card.owner}}
+            </div>
+          </div>
+          <div class="w-full text-end">
+            vencimiento: {{card.expiration}}
+          </div>
+        </div>
+      </mat-radio-button>
+
+      <div class="ml-[45px] w-[500px] my-2">
+        <button class="w-full" mat-stroked-button color="primary" (click)="addCard('150ms', '150ms')">+ Añadir metodo de pago</button>
       </div>
-    </mat-expansion-panel>
+    </mat-card>
   </div>
 
   <div class="mt-[83px]">
-    <mat-card class="w-[350px] h-fit">
-      <mat-card-header>
-        <mat-card-title>Servicio EOS</mat-card-title>
-      </mat-card-header>
-      <div class="flex flex-col p-4">
-          <div class="flex justify-between mb-2 pt-2 border-t border-zinc-300">
-              <span>Servicio:</span>
-              <span>5000MXN</span>
-          </div>
-          <div class="flex justify-between mb-2 pb-2 border-b border-zinc-300">
-            <span>Descuento:</span>
-            <span>0MXN</span>
-          </div>
-          <div class="flex justify-between">
-            <span>Total:</span>
-            <span>5000MXN</span>
-          </div>
+    <mat-card class="w-[350px] p-4">
+      <div class="py-1 text-xl text-center">
+        Servicio EOS
+      </div>
+      <div class= "text-zinc-700 text-sm mb-4">
+        Para pagar primero debes seleccionar un metodo de pago
+      </div>
+      <div class="flex flex-col">
+        <div class="flex justify-between mb-2 pt-2 border-t border-zinc-300">
+          <span>Servicio:</span>
+          <span>5000MXN</span>
+        </div>
+        <div class="flex justify-between mb-2 pb-2 border-b border-zinc-300">
+          <span>Descuento:</span>
+          <span>0MXN</span>
+        </div>
+        <div class="flex justify-between">
+          <span>Total:</span>
+          <span>5000MXN</span>
+        </div>
+      </div>
+      <div class="mt-6 w-full flex justify-center">
+        <button mat-flat-button color="primary">Pagar</button>
       </div>
     </mat-card>
     <div class="mt-2">
