--- a/src/app/pages/pagar/pagar.component.html
+++ b/src/app/pages/pagar/pagar.component.html
@@ -48,12 +48,12 @@
           <span>0MXN</span>
         </div>
         <div class="flex justify-between">
-          <span>Total:</span>
-          <span>5000MXN</span>
+          <span class="font-semibold text-lg">Total:</span>
+          <span class="font-semibold text-lg">5000MXN</span>
         </div>
       </div>
       <div class="mt-6 w-full flex justify-center">
-        <button mat-flat-button color="primary">Pagar</button>
+        <button mat-flat-button color="primary" class="w-full">Pagar</button>
       </div>
     </mat-card>
     <div class="mt-2">
