--- a/src/app/components/payment-card/payment-card.component.html
+++ b/src/app/components/payment-card/payment-card.component.html
@@ -49,7 +49,7 @@
         Eliminar
     </a>
     <div class="modal-body">
-        <h2 class="font-semibold text-lg">¿Seguro que deseas eliminar este metodo de pago?</h2>
+        <h2 class="font-semibold text-lg text-center">¿Seguro que deseas eliminar este metodo de pago?</h2>
         <div class="border rounded flex flex-col justify-center items-center p-4 my-4">
             <span>Eliminar tarjeta con terminación en: {{finishedIn}}</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
