--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-screen h-screen">
+<div class="flex w-screen h-screen bg-white">
     <div class="flex justify-center items-center w-5/12 max-[960px]:w-screen h-full overflow-y-auto">
         <ng-content></ng-content>
     </div>
