--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -7,48 +7,48 @@
         <form action="">
             <div class="flex justify-between">
                 <div class="flex flex-col mb-6 mr-1">
-                    <label class="text-sm font-semibold mb-2" for="">Nombre(s)</label>
+                    <label class="text-sm  mb-2" for="">Nombre(s)</label>
                     <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu contraseña">
                 </div>
                 <div class="flex flex-col mb-6 ml-1">
-                    <label class="text-sm font-semibold mb-2" for="">Apellido paterno</label>
+                    <label class="text-sm  mb-2" for="">Apellido paterno</label>
                     <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu apellido paterno">
                 </div>
             </div>
             <div class="flex justify-between">
                 <div class="flex flex-col mb-6 mr-1">
-                    <label class="text-sm font-semibold mb-2" for="">Apellido materno</label>
+                    <label class="text-sm  mb-2" for="">Apellido materno</label>
                     <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu apellido materno">
                 </div>
                 <div class="flex flex-col mb-6 ml-1">
-                    <label class="text-sm font-semibold mb-2" for="">Nombre de usuario</label>
+                    <label class="text-sm  mb-2" for="">Nombre de usuario</label>
                     <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Elige un nombre de usuario">
                 </div>
             </div>
             <div class="flex flex-col mb-6">
-                <label class="text-sm font-semibold mb-2" for="">Correo</label>
+                <label class="text-sm  mb-2" for="">Correo</label>
                 <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu correo">
             </div>
             <div class="flex flex-col mb-6">
-                <label class="text-sm font-semibold mb-2" for="">Numero de contrato</label>
+                <label class="text-sm  mb-2" for="">Numero de contrato</label>
                 <input type="text" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu numero de contrato">
             </div>
             <div class="flex flex-col mb-6">
-                <label class="text-sm font-semibold mb-2" for="">Contraseña</label>
+                <label class="text-sm  mb-2" for="">Contraseña</label>
                 <input type="password" class="p-2 border border-zinc-300 rounded" placeholder="Ingresa tu contraseña">
             </div>
             <div class="flex flex-col mb-6">
-                <label class="text-sm font-semibold mb-2" for="">Confirmar contraseña</label>
+                <label class="text-sm  mb-2" for="">Confirmar contraseña</label>
                 <input type="password" class="p-2 border border-zinc-300 rounded" placeholder="Confirma tu contraseña">
             </div>
             <div class="flex">
-                <button [routerLink]="['/servicios']" type="button" class="bg-indigo-600 rounded p-2 w-full text-white font-semibold">
+                <button [routerLink]="['/servicios']" type="button" class="bg-indigo-600 rounded p-2 w-full text-white ">
                     Crear cuenta
                 </button>
             </div>
         </form>
         <div class="flex justify-center items-center mt-4 pt-2 border-t border-t-zinc-300">
-            <p class="text-sm">¿Ya tienes una cuenta? <a [routerLink]="['/']" class="font-semibold text-indigo-600">Inicia sesión</a></p>
+            <p class="text-sm">¿Ya tienes una cuenta? <a [routerLink]="['/']" class=" text-indigo-600">Inicia sesión</a></p>
         </div>
     </div>
 </app-auth-layout>
