--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,10 +1,8 @@
-<div class="flex flex-col justify-center">
-  <div class="p-4">
-    <div
-      class="bg-white w-3/4 relative flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto">
-      <h2 class="text-lg font-bold px-8 pt-8 pb-2 -mb-8">Información del Perfil</h2>
-      <p class="text-sm text-gray-600 px-8 py-8 -mb-8">Actualice la información de perfil y la dirección de correo
-        electrónico de su cuenta.</p>
+<div class="flex flex-col justify-center items-center space-y-6">
+    <div class="bg-white w-2/5 flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto mx-2">
+      <span class="text-lg font-bold px-8 pt-8 pb-2 -mb-8">Información del Perfil</span>
+      <span class="text-sm text-gray-600 px-8 py-8 -mb-8">Actualice la información de perfil y la dirección de correo
+        electrónico de su cuenta.</span>
       <form>
         <div class="flex flex-wrap mb-8 mr-6 p-8">
           <div class="flex w-1/2 flex-col px-4 mt-3 max-[768px]:w-full">
@@ -24,40 +22,38 @@
           </div>
         </div>
         <div class="border-t-2 border-zinc-200 flex p-4 pr-3 pb-3 justify-end">
-          <button class="px-3 py-1 mr-4 rounded border border-zinc-300 text-indigo-600">Guardar</button>
+          <button mat-flat-button color="primary">Guardar</button>
         </div>
       </form>
     </div>
-  </div>
 
-  <div class="p-4">
-    <div
-      class="bg-white w-3/4 relative flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto">
-      <h2 class="text-lg font-bold px-8 pt-8 pb-2 -mb-8">Actualizar contraseña</h2>
-      <p class="text-sm text-gray-600 px-8 py-8 -mb-8">Utiliza una contraseña compleja y aleatoria para mentener la
-        seguridad.</p>
+    <div class="bg-white w-2/5 flex flex-col flex-auto rounded shadow-md overflow-hidden max-[1200px]:w-full m-auto mx-2">
+      <span class="text-lg font-bold px-8 pt-8 pb-2 -mb-8">Actualizar contraseña</span>
+      <span class="text-sm text-gray-600 px-8 py-8 -mb-8">Utiliza una contraseña compleja y aleatoria para mentener la
+        seguridad.</span>
       <form>
         <div class="flex flex-wrap mb-8 mr-6 p-8">
-          <div class="flex flex-col px-4 mt-3 w-full">
+          <div class="flex flex-col px-4 mt-3 w-1/2">
             <label class="mb-2" for="pass">Contraseña actual:</label>
             <input id="pass" type="text" class="border border-gray-300 rounded-md p-1 py-2 flex flex-auto"
               placeholder="Escribe tu nombre" />
           </div>
-          <div class="flex flex-col px-4 mt-3 w-full">
-            <label class="mb-2" for="new-pass">Nueva contraseña:</label>
-            <input id="new-pass" type="text" class="border border-gray-300 rounded-md p-1 py-2 flex flex-auto"
-              placeholder="Escribe tu nombre" />
-          </div>
-          <div class="flex w-full flex-col px-4 mt-3">
-            <label class="mb-2" for="conf-pass">Confirmar nueva contraseña:</label>
-            <input id="conf-pass" type="text" class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto"
-              placeholder="Escribe tu nombre" />
+          <div class="flex w-full">
+            <div class="flex flex-col px-4 mt-3 w-full">
+              <label class="mb-2" for="new-pass">Nueva contraseña:</label>
+              <input id="new-pass" type="text" class="border border-gray-300 rounded-md p-1 py-2 flex flex-auto"
+                placeholder="Escribe tu nombre" />
+            </div>
+            <div class="flex w-full flex-col px-4 mt-3">
+              <label class="mb-2" for="conf-pass">Confirmar nueva contraseña:</label>
+              <input id="conf-pass" type="text" class="border border-gray-300 rounded-md px-1 py-2 flex flex-auto"
+                placeholder="Escribe tu nombre" />
+            </div>
           </div>
         </div>
         <div class="border-t-2 border-zinc-200 flex p-4 pr-3 pb-3 justify-end">
-          <button class="px-3 py-1 mr-4 rounded border border-zinc-300 text-indigo-600">Actualizar contraseña</button>
+          <button mat-flat-button color="primary">Actualizar</button>
         </div>
       </form>
     </div>
-  </div>
 </div>
