--- a/src/app/pages/tarjetas/tarjetas.component.html
+++ b/src/app/pages/tarjetas/tarjetas.component.html
@@ -27,7 +27,7 @@
                     <div class="flex justify-between">
                         <mat-form-field class="flex flex-col w-1/2 pr-2">
                             <mat-label>Fecha de vencimiento</mat-label>
-                            <input matInput type="text" formControlName="vencimiento" mask="00/00" placeholder="00/00">
+                            <input matInput type="text" formControlName="vencimiento" mask="00/00" placeholder="MM/AA">
                         </mat-form-field>
                         <mat-form-field class="flex flex-col w-1/2 pl-2">
                             <mat-label class="mb-2 max-sm:text-sm">Codigo de seguridad</mat-label>
