--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <nav class="fixed drop-shadow-sm top-0 z-50 w-full bg-white border-b border-gray-200">
   <div class="flex flex-wrap items-center justify-between mx-auto p-4">
     <a [routerLink]="['/servicios']" class="flex items-center">
-      <img src="assets/shared/logo/LOGOPIXL.png" alt="">
+      <!-- <img src="../../../assets/shared/LOGOPIXL.png" alt=""> -->
       <span class="self-center text-2xl whitespace-nowrap ">
         Workcube Services
       </span>
